updated about images, added text shadow for contrast, fixed header hireachy

--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,11 @@
     --white: #F6F7FC;
     --dark-blue: #4069B2;
     --black: #1E1E1E;
-    --action: #AB57FF;
-    --action-hover: #BE8FED;
+    /* --action: #AB57FF; */
+     /* --action-hover: #BE8FED; */
+    --action: #7000E0; /*Updated to meet WCAG AAA Contrast*/
+    --action-hover: #9632fa;
+   
     --star-rating: #FFF500;
 }
 
@@ -80,6 +83,7 @@ h3 {
     margin-top: 36px;
     margin-bottom: 36px;
     font-size: 40px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 
 }
 
@@ -183,12 +187,11 @@ button:hover:not(.navbar-toggler) {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
 }
-
-.aboutContentBox>h3 {
+.aboutContentBox>h2{
+    color: var(--black);
     margin-bottom: 16px;
+    font-size: 36px;
 }
-
-
 .aboutContentBox {
     padding: 16px;
 }
@@ -199,6 +202,7 @@ button:hover:not(.navbar-toggler) {
     width: 276px;
     margin: 1em;
     text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 
 }
 
@@ -206,7 +210,7 @@ button:hover:not(.navbar-toggler) {
     background-color: var(--droplet-blue);
     padding: 16px;
     height: 146px;
-
+    width: 264px;
 
 }
 
@@ -225,9 +229,9 @@ button:hover:not(.navbar-toggler) {
 }
 
 .aboutImg {
-    border: 2px solid var(--black);
-    width: 100%;
-    height: 170px;
+    border: 1px solid var(--black);
+    width: 264px;
+    height: 146px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
